--- a/adnan/package.json
+++ b/adnan/package.json
@@ -12,11 +12,13 @@
 		"react-native": "0.47.1",
 		"react-native-chatbot": "^0.0.1-alpha.5",
 		"react-native-router-flux": "^4.0.0-beta.17",
-		"react-simple-chatbot": "^0.2.2"
+		"styled-components": "^2.1.2"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.1.0",
+		"eslint": "^3.19.0",
+		"eslint-config-rallycoding": "^3.2.0",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
